--- a/_config.yml
+++ b/_config.yml
@@ -156,8 +156,8 @@ yat:
 # Page default value
 # defaults:
 #   home:
-#     heading: "Your awesome heading"
-#     subheading: "Your awesome subheading"
+#     heading: "Sellbuymusic"
+#     subheading: "Royalty Free music"
 #     banner: "Your image url"
 
 # Banner default settings
