--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sellbuymusic
-email: biz@sellbuymusic.com
-author: Musicplat
+title: "Sellbuymusic"
+email: "biz@sellbuymusic.com"
+author: "Musicplat"
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
