베너 이미지 삽입

--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ yat:
    home:
      heading: "Sellbuymusic"
      subheading: "Royalty Free music"
-     banner: "Your image url"
+     banner: <a href="https://ibb.co/xgx7Kgj"><img src="https://i.ibb.co/c84rK8F/image.jpg" alt="image" border="0"></a>
 
 # Banner default settings
 # These banner settings are for global banner default, but you can also
