앞으로 당기기 함

--- a/_config.yml
+++ b/_config.yml
@@ -153,14 +153,14 @@ yat:
 #   - tags.html
 #   - about.md
 
- Page default value
- defaults:
-   home:
-     heading: "Sellbuymusic"
-     subheading: "Royalty Free music"
-     banner: <a href="https://ibb.co/xgx7Kgj"><img src="https://i.ibb.co/c84rK8F/image.jpg" alt="image" border="0"></a>
+Page default value
+defaults:
+  home:
+    heading: "Sellbuymusic"
+    subheading: "Royalty Free music"
+    banner: <a href="https://ibb.co/xgx7Kgj"><img src="https://i.ibb.co/c84rK8F/image.jpg" alt="image" border="0"></a>
 
-# Banner default settings
+Banner default settings
 # These banner settings are for global banner default, but you can also
 # config it by the front matter for one specific post
 # banner:
