--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,7 @@
-# main links
 main:
- - title: "Category"
-   url: /categories/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
-  counts:
-    - title : "카테고리"
-      use : true
-    - title : "태그"
-      use : true 
+  - title: "Tags"
+    url: /tags/
+  - title: "Category"
+    url: /categories/
+  - title: "Search"
+    url: /search/
