--- a/_config.yml
+++ b/_config.yml
@@ -123,8 +123,8 @@ author:
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - # label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/sellbuymusic"
+      # icon: "fab fa-fw fa-github"
+      # url: "https://github.com/sellbuymusic"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
