사이트 푸터에서 깃허브 제거

--- a/_config.yml
+++ b/_config.yml
@@ -138,8 +138,8 @@ footer:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+    - # label: "GitHub"
+      # icon: "fab fa-fw fa-github"
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
