--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
     url: /tags/
   - title: "Category"
     url: /categories/
-  - title: "Search"
-    url: /search/
+  - #title: "Search"
+    #url: /search/
